# kalshi-sub-accounts

./: .gitignore  Cargo.toml  README.md  config.json.example
src/: main.rs
