[package]
name = "kalshi-sub-accounts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
hex = "0.4"
pkcs1 = { version = "0.7.5", features = ["pem"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rsa = { version = "0.9", features = ["sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
